DEVOPS-483: Add LICENSE.TXT for distribution conformance.
DEVOPS-483 (Add LICENSE.txt files to binary builds of all our plug-ins)

--- a/org.knime.core.data.uritype/build.properties
+++ b/org.knime.core.data.uritype/build.properties
@@ -5,3 +5,4 @@ bin.includes = META-INF/,\
                LICENSE.txt,\
                README.TXT,\
                plugin.xml
+src.includes = LICENSE.txt
