--- a/org.knime.core.pmml/build.properties
+++ b/org.knime.core.pmml/build.properties
@@ -1,7 +1,9 @@
 bin.includes = META-INF/,\
                lib/schemas.jar,\
-               knime-pmml.jar
+               knime-pmml.jar,\
+               LICENSE.TXT
 source.knime-pmml.jar = src/eclipse/
 output.knime-pmml.jar = bin/eclipse/
 jars.extra.classpath = lib/schemas.jar
-src.includes = src/xmlbeans
+src.includes = src/xmlbeans,\
+               LICENSE.TXT
