--- a/org.knime.core/build.properties
+++ b/org.knime.core/build.properties
@@ -10,3 +10,4 @@ source.knime-core.jar = src/eclipse/
 output.knime-core.jar = bin/eclipse/
 jars.extra.classpath = platform:/plugin/org.knime.core.pmml/lib/schemas.jar,\
                        lib/schemas.jar
+src.includes = LICENSE.txt
