--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -304,7 +304,8 @@
          point="org.knime.core.DataType">
       <DataType
             cellClass="org.knime.core.data.def.IntCell"
-            factoryClass="org.knime.core.data.def.IntCell$IntCellFactory">
+            factoryClass="org.knime.core.data.def.IntCell$IntCellFactory"
+            factoryValue="org.knime.core.data.schema.factories.IntValueFactory">
          <serializer
                cellClass="org.knime.core.data.def.IntCell"
                serializerClass="org.knime.core.data.def.IntCell$IntCellSerializer">
@@ -312,7 +313,8 @@
       </DataType>
       <DataType
             cellClass="org.knime.core.data.def.StringCell"
-            factoryClass="org.knime.core.data.def.StringCell$StringCellFactory">
+            factoryClass="org.knime.core.data.def.StringCell$StringCellFactory"
+            factoryValue="org.knime.core.data.schema.factories.StringValueFactory">
          <serializer
                cellClass="org.knime.core.data.def.StringCell"
                serializerClass="org.knime.core.data.def.StringCell$StringSerializer">
@@ -320,7 +322,8 @@
       </DataType>
       <DataType
             cellClass="org.knime.core.data.def.DoubleCell"
-            factoryClass="org.knime.core.data.def.DoubleCell$DoubleCellFactory">
+            factoryClass="org.knime.core.data.def.DoubleCell$DoubleCellFactory"
+            factoryValue="org.knime.core.data.schema.factories.DoubleValueFactory">
          <serializer
                cellClass="org.knime.core.data.def.DoubleCell"
                serializerClass="org.knime.core.data.def.DoubleCell$DoubleSerializer">
@@ -351,7 +354,8 @@
       </DataType>
       <DataType
             cellClass="org.knime.core.data.def.BooleanCell"
-            factoryClass="org.knime.core.data.def.BooleanCell$BooleanCellFactory">
+            factoryClass="org.knime.core.data.def.BooleanCell$BooleanCellFactory"
+            factoryValue="org.knime.core.data.schema.factories.BooleanValueFactory">
          <serializer
                cellClass="org.knime.core.data.def.BooleanCell"
                serializerClass="org.knime.core.data.def.BooleanCell$BooleanSerializer">
@@ -373,7 +377,8 @@
       </DataType>
       <DataType
             cellClass="org.knime.core.data.def.LongCell"
-            factoryClass="org.knime.core.data.def.LongCell$LongCellFactory">
+            factoryClass="org.knime.core.data.def.LongCell$LongCellFactory"
+            factoryValue="org.knime.core.data.schema.factories.LongValueFactory">
          <serializer
                cellClass="org.knime.core.data.def.LongCell"
                serializerClass="org.knime.core.data.def.LongCell$LongSerializer">
