--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 				<module>org.knime.core.pmml</module>
 				<module>org.knime.core</module>
 				<module>org.knime.core.ui</module>
+				<module>org.knime.slf4j.binding</module>
 				<module>org.knime.testing</module>
 				<module>org.knime.rsyntaxtextarea</module>
 				<module>org.knime.features.testing.core</module>
@@ -53,6 +54,8 @@
 				<module>org.knime.features.core</module>
 				<module>org.knime.features.testing.core</module>
 				<module>org.knime.core.workflow.tests</module>
+				<module>org.knime.slf4j.binding</module>
+				<module>org.knime.slf4j.binding.tests</module>
 			</modules>
 
 			<repositories>
